fix: Fixed vue-cropper displays bugs

--- a/src/design/index.less
+++ b/src/design/index.less
@@ -52,6 +52,7 @@ body {
 img {
   width: 100%;
   height: 100%;
+  max-width: none;
   border-style: none;
 }
 
